force-app/main/default/objects/SecurityPolicy__mdt/SecurityPolicy__mdt.object-meta.xml
<CustomObject>
    <label>Security Policy</label>
</CustomObject>