force-app/main/default/objects/SecurityPolicy__mdt/fields/ActionButtons__c.field-meta.xml
<CustomField>
    <fullName>ActionButtons__c</fullName>
    <inlineHelpText>JSON format for dynamic Teams message action buttons.</inlineHelpText>
    <label>Action Buttons (JSON)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>