force-app/main/default/objects/SecurityPolicy__mdt/fields/ActionCritical__c.field-meta.xml
<CustomField>
    <fullName>ActionCritical__c</fullName>
    <label>Action (Critical)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>