force-app/main/default/objects/SecurityPolicy__mdt/fields/ActionHigh__c.field-meta.xml
<CustomField>
    <fullName>ActionHigh__c</fullName>
    <description>위반 횟수가 ThresholdHigh__c에 도달했을 때 수행될 액션 코드들 (콤마 또는 세미콜론 분리)</description>
    <label>Action - High</label>
    <length>255</length>
    <type>Text</type>
</CustomField>