force-app/main/default/objects/SecurityPolicy__mdt/fields/ActionLow__c.field-meta.xml
<CustomField>
    <fullName>ActionLow__c</fullName>
    <label>Action (Low)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>