force-app/main/default/objects/SecurityPolicy__mdt/fields/ActionMedium__c.field-meta.xml
<CustomField>
    <fullName>ActionMedium__c</fullName>
    <label>Action (Medium)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>