force-app/main/default/objects/SecurityPolicy__mdt/fields/ActionTypes__c.field-meta.xml
<CustomField>
    <fullName>ActionTypes__c</fullName>
    <inlineHelpText>Default actions (Comma or Semicolon separated) executed unconditionally.</inlineHelpText>
    <label>Default Action Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>