force-app/main/default/objects/SecurityPolicy__mdt/fields/PolicyCode__c.field-meta.xml
<CustomField>
    <fullName>PolicyCode__c</fullName>
    <label>Policy Code</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>