force-app/main/default/objects/SecurityPolicy__mdt/fields/ThresholdCritical__c.field-meta.xml
<CustomField>
    <fullName>ThresholdCritical__c</fullName>
    <label>Threshold (Critical)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>