force-app/main/default/objects/SecurityPolicy__mdt/fields/ThresholdHigh__c.field-meta.xml
<CustomField>
    <fullName>ThresholdHigh__c</fullName>
    <description>해당 정책 위반 카운트가 이 임계치에 도달하면 High 액션(ActionHigh__c)이 실행됩니다.</description>
    <label>Threshold - High</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>