force-app/main/default/objects/SecurityPolicy__mdt/fields/ThresholdLow__c.field-meta.xml
<CustomField>
    <fullName>ThresholdLow__c</fullName>
    <label>Threshold (Low)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>