force-app/main/default/objects/SecurityPolicy__mdt/fields/ThresholdMedium__c.field-meta.xml
<CustomField>
    <fullName>ThresholdMedium__c</fullName>
    <label>Threshold (Medium)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>